# bahria-lms-clone

./: CMakeLists.txt  README.md  admindashboard.cpp  admindashboard.h  admindashboard.ui  lms.cpp  lms.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  studentdashboard.cpp  studentdashboard.h  studentdashboard.ui  style.qss  teacherdashboard.cpp  teacherdashboard.h  teacherdashboard.ui
